--- a/build.xml
+++ b/build.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Phing test" default="dist">
+<project name="Phing test" default="build">
+    <property name="script.path" value="./script" />
+    <property name="php.runtime" value="php " />
+    <tstamp />
+    <property name="gittag.name" value="build/${DSTAMP}${TSTAMP}" />
 
-    <!-- ============================================  -->
-    <!-- Target: prepare                               -->
-    <!-- ============================================  -->
-    <target name="prepare">
-        <echo msg="Making directory ./build" />
-        <mkdir dir="./build" />
+    <target name="migrate" depends="build">
+        <exec command="${php.runtime} ${script.path}/migrate.php" outputProperty="migration.status" />
+        <echo msg="Migration status: ${migration.status}" />
     </target>
 
-    <!-- ============================================  -->
-    <!-- Target: build                                 -->
-    <!-- ============================================  -->
-    <target name="build" depends="prepare">
-        <echo msg="Copying files to build directory..." />
-
-        <echo msg="Copying ./about.php to ./build directory..." />
-        <copy file="./about.php" tofile="./build/about.php" />
-
-        <echo msg="Copying ./browsers.php to ./build directory..." />
-        <copy file="./browsers.php" tofile="./build/browsers.php" />
-
-        <echo msg="Copying ./contact.php to ./build directory..." />
-        <copy file="./contact.php" tofile="./build/contact.php" />
+    <target name="revert">
+        <echo message="Reverting..." />
+        <gitcheckout repository="." branchname="${gittag.name}" />
     </target>
 
-    <!-- ============================================  -->
-    <!-- (DEFAULT)  Target: dist                       -->
-    <!-- ============================================  -->
-    <target name="dist" depends="build">
-        <echo msg="Creating archive..." />
+    <target name="build">
+        <echo message="Building necessary directories..." />
+        <mkdir dir="cache/" />
+        <mkdir dir="application/logs/" />
 
-        <tar destfile="./build/build.tar.gz" compression="gzip">
-            <fileset dir="./build">
-                <include name="*" />
-            </fileset>
-        </tar>
+        <echo message="Git-jutsu..." />
 
-        <echo msg="Files copied and compressed in build directory OK!" />
+        <gittag name="${gittag.name}" repository="." />
+        <gitcheckout repository="." branchname="master" />
+        <gitpull repository="." source="origin" refspec="master" />
+        <phingcall target="migrate" />
+        <if>
+            <contains string="${migration.status}" substring="ok" />
+            <then>
+                <echo message="Migration succeeded" />
+            </then>
+            <else>
+                <echo message="Migration failed" />
+                <phingcall target="revert" />
+            </else>
+        </if>
+        <echo message="Cleaning up..." />
+        <gittag name="${gittag.name}" repository="." delete="true" />
     </target>
 </project>
