--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Phing test" default="dist">
-    <property name="repo.dir" value="./" />
-    <resolvepath propertyName="repo.dir.resolved" file="${repo.dir}" />
+    <target name="prepare" >
+        <property name="repo.dir" value="./" />
+        <resolvepath propertyName="repo.dir.resolved" file="${repo.dir}" />
 
-    <php expression="include('${project.basedir}/vendor/autoload.php');"/>
-    <property name="script.path" value="./script" />
-    <property name="php.runtime" value="php " />
-    <tstamp />
-    <property name="gittag.name" value="build/${DSTAMP}${TSTAMP}" />
-    <echo message="siema" />
+        <php expression="include('${project.basedir}/vendor/autoload.php');"/>
+        <property name="script.path" value="./script" />
+        <property name="php.runtime" value="php " />
+        <tstamp />
+        <property name="gittag.name" value="build/${DSTAMP}${TSTAMP}" />
+    </target>
 
     <target name="migrate">
         <exec command="${php.runtime} ${script.path}/migrate.php" outputProperty="migration.status" />
@@ -20,7 +21,7 @@
         <exec command="git checkout -- ." />
     </target>
 
-    <target name="dist">
+    <target name="dist" depends="prepare">
         <echo message="Building necessary directories..." />
         <mkdir dir="cache/" />
         <mkdir dir="application/logs/" />
